[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.12"
langgraph = "^0.2.3"
langchain-anthropic = "^0.1.22"
langchain-core = "^0.2.30"
tavily-python = "^0.3.9"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
